add experiment figures

--- a/consistent-pigs/write-up/write-up.tex
+++ b/consistent-pigs/write-up/write-up.tex
@@ -254,13 +254,14 @@ Our program can be run with:
   \textbf{\texttt{./sbt11 numPigs worldSizeRatio}}: where numPigs is the number of pigs in the simulation and worldSizeRatio is the ratio of world:pigs. For example, to run with 10 pigs on a world of size 30 you would run: ./sbt11 10 3.
 \end{enumerate}
 
-\section{Experiments:}
-\missingfigure{Experiment having to do with consistency}
-\missingfigure{Experiment having to do with fault-tolerance}
-%\includegraphics{figs/chart_1.pdf}
-%\includegraphics{figs/chart_2.pdf}
-
 \pagebreak
+
+\section{Experiments:}
+
+\noindent\makebox[\textwidth]{\includegraphics{figs/chart_1.pdf}}
+\noindent\makebox[\textwidth]{\includegraphics{figs/chart_2.pdf}}
+
+\clearpage
 
 \section{Test cases:}
 \begin{enumerate}
